Adding endpoint for farms and stations
