# api.py
@@ -5,6 +5,7 @@ import i18n
 import app
 import dbaccess
 
+
 def getOrigins(language):
     if not i18n.isSupported(language):
         return 'Language is not supported', 400
@@ -55,6 +56,15 @@ def getRoasterCountries(language):
     else:
         return 'Invalid mime type requested', 400
 
+
+def response(html, title, languageCode, data):
+    if connexion.request.accept_mimetypes.accept_html:
+        return make_response(render_template(html, data=data, title=title), 200)
+    elif connexion.request.accept_mimetypes.accept_json:
+        return json.jsonify(data)
+    else:
+        return 'Invalid mime type requested', 400
+
 def getRegions(language, origin):
     if not i18n.isSupported(language):
         return 'Language is not supported', 400
@@ -62,19 +72,14 @@ def getRegions(language, origin):
     regions = []
     countryName = ''
     with app.dbengine.connect() as connection:
+        if not dbaccess.hasCountry(connection, origin):
+            return 'Origin unknown', 404
+
         regions = dbaccess.getRegions(connection, origin, language)
         countryName = dbaccess.getCountryName(connection, origin, language)
-    
-    if connexion.request.accept_mimetypes.accept_html:
-        title = i18n.t('region_title', language, country=countryName)
-        params = {'title': title, 'regions': regions, 'language': language}
-        return make_response(render_template('regions.html', params=params), 200)
-
-    elif connexion.request.accept_mimetypes.accept_json:
-        return json.jsonify(regions)
-
-    else:
-        return 'Invalid mime type requested', 400
+    title = i18n.t('region_title', language, country=countryName)
+    data = {'title': title, 'regions': regions, 'language': language}
+    return response('regions.html', title, language, data)
 
 def getProcessing(language):
     if not i18n.isSupported(language):
@@ -83,17 +88,9 @@ def getProcessing(language):
     processing = []
     with app.dbengine.connect() as connection:
         processing = dbaccess.getProcessing(connection, language)
+    title = i18n.t('processing_title', language)
+    return response('processing.html', title, language, processing)
 
-    if connexion.request.accept_mimetypes.accept_html:
-        title = i18n.t('processing_title', language)
-        return make_response(render_template('processing.html', processing=processing, title=title), 200)
-
-    elif connexion.request.accept_mimetypes.accept_json:
-        return json.jsonify(processing)
-    else:
-        return 'Invalid mime type requested', 400
-
-        
 def getRoasters(language):
     if not i18n.isSupported(language):
         return 'Language is not supported', 400
@@ -101,15 +98,8 @@ def getRoasters(language):
     roasters = []
     with app.dbengine.connect() as connection:
         roasters = dbaccess.getRoasters(connection, language)
-
-    if connexion.request.accept_mimetypes.accept_html:
-        title = i18n.t('roasters_title', language)
-        return make_response(render_template('roasters.html', roasters=roasters, title=title), 200)
-
-    elif connexion.request.accept_mimetypes.accept_json:
-        return json.jsonify(roasters)
-    else:
-        return 'Invalid mime type requested', 400
+    title = i18n.t('roasters_title', language)
+    return response('roasters.html', title, language, roasters)
 
 def getRoastersInCountry(language):
     if not i18n.isSupported(language):
@@ -118,15 +108,8 @@ def getRoastersInCountry(language):
     roasters = []
     with app.dbengine.connect() as connection:
         roasters = dbaccess.getRoasters(connection, language)
-
-    if connexion.request.accept_mimetypes.accept_html:
-        title = i18n.t('roasters_title', language)
-        return make_response(render_template('roasters.html', roasters=roasters, title=title), 200)
-
-    elif connexion.request.accept_mimetypes.accept_json:
-        return json.jsonify(roasters)
-    else:
-        return 'Invalid mime type requested', 400
+    title = i18n.t('roasters_title', language)
+    return response('roasters.html', title, language, roasters)
 
 def getVarieties(language):
     if not i18n.isSupported(language):
@@ -135,12 +118,41 @@ def getVarieties(language):
     varieties = []
     with app.dbengine.connect() as connection:
         varieties = dbaccess.getVarieties(connection)
+    title = i18n.t('varieties_title', language)
+    return response('varieties.html', title, language, varieties)
 
-    if connexion.request.accept_mimetypes.accept_html:
-        title = i18n.t('varieties_title', language)
-        return make_response(render_template('varieties.html', varieties=varieties, title=title), 200)
+def getFarms(language, origin, region):
+    if not i18n.isSupported(language):
+        return 'Language is not supported', 400
 
-    elif connexion.request.accept_mimetypes.accept_json:
-        return json.jsonify(varieties)
-    else:
-        return 'Invalid mime type requested', 400
+    farms = []
+    regionName, countryName = '', ''
+    with app.dbengine.connect() as connection:
+        if not dbaccess.hasCountry(connection, origin):
+            return 'Origin unknown', 404
+        if not dbaccess.isRegionInCountry(connection, region, origin):
+            return 'Region in origin is unknown', 404
+
+        countryName = dbaccess.getCountryName(connection, origin, language)
+        regionName = dbaccess.getRegionName(connection, origin, region)
+        farms = dbaccess.getFarms(connection, region)
+    title = i18n.t('farms_in_region_title', language, region=regionName, country=countryName)
+    return response('farms.html', title, language, farms)
+
+def getStations(language, origin, region):
+    if not i18n.isSupported(language):
+        return 'Language is not supported', 400
+
+    stations = []
+    regionName, countryName = '', ''
+    with app.dbengine.connect() as connection:
+        if not dbaccess.hasCountry(connection, origin):
+            return 'Origin unknown', 404
+        if not dbaccess.isRegionInCountry(connection, region, origin):
+            return 'Region in origin is unknown', 404
+
+        countryName = dbaccess.getCountryName(connection, origin, language)
+        regionName = dbaccess.getRegionName(connection, origin, region)
+        stations = dbaccess.getStations(connection, region)
+    title = i18n.t('stations_in_region_title', language, region=regionName, country=countryName)
+    return response('farms.html', title, language, stations)
